deploy/base/xlsconverter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: xlsconverter
    app.kubernetes.io/role: microservice
  name: greenstar-xlsconverter
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: xlsconverter
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/component: xlsconverter
    spec:
      containers:
        - image: ghcr.io/arikkfir/greenstar/xlsconverter
          name: xlsconverter
          ports:
            - containerPort: 8000
              name: http
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
      serviceAccountName: greenstar-xlsconverter
