deploy/base/api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: api
  name: greenstar-api
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: api
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: api
    app.kubernetes.io/role: microservice
  name: greenstar-api
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: api
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/component: api
    spec:
      containers:
        - image: ghcr.io/arikkfir/greenstar/api
          name: api
          ports:
            - containerPort: 8000
              name: http
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
      serviceAccountName: greenstar-api
