deploy/base/backend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: backend
  name: greenstar-backend
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: backend
  name: greenstar-backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: backend
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/component: backend
    spec:
      containers:
        - image: ghcr.io/arikkfir/greenstar/backend
          name: backend
          ports:
            - containerPort: 8000
              name: http
          resources:
            limits:
              cpu: 200m
              memory: 32Mi
            requests:
              cpu: 100m
              memory: 16Mi
      serviceAccountName: greenstar-backend
