deploy/base/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: frontend
  name: greenstar-frontend
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: frontend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: frontend
    greenstar.kfirs.com/oauth-client: "true"
  name: greenstar-frontend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: frontend
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/component: frontend
    spec:
      containers:
        - image: ghcr.io/arikkfir/greenstar/frontend
          name: frontend
          startupProbe:
            httpGet:
              port: http
              path: /index.html
            failureThreshold: 10
            initialDelaySeconds: 20
            periodSeconds: 5
            terminationGracePeriodSeconds: 30
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              port: http
              path: /index.html
            failureThreshold: 3
            periodSeconds: 3
            terminationGracePeriodSeconds: 10
            timeoutSeconds: 3
          ports:
            - containerPort: 80
              name: http
          resources:
            limits:
              cpu: 1000m
              memory: 128Gi
            requests:
              cpu: 200m
              memory: 64Mi
      serviceAccountName: greenstar-frontend
