deploy/base/neo4j.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: neo4j
  name: greenstar-neo4j
spec:
  ports:
    - name: neo4j
      port: 7687
      protocol: TCP
      targetPort: neo4j
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: neo4j
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: neo4j
  name: greenstar-neo4j
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: neo4j
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: neo4j
    spec:
      containers:
        - image: neo4j:5.3-enterprise
          name: neo4j
          ports:
            - containerPort: 2004
              name: metrics
            - containerPort: 7687
              name: neo4j
            - containerPort: 7474
              name: http
          startupProbe:
            exec:
              command:
                - /var/lib/neo4j/bin/cypher-shell
                - --non-interactive
                - SHOW DATABASES
            failureThreshold: 30
            periodSeconds: 10
            terminationGracePeriodSeconds: 60
            timeoutSeconds: 5
          livenessProbe:
            exec:
              command:
                - /var/lib/neo4j/bin/cypher-shell
                - --non-interactive
                - SHOW DATABASES
            failureThreshold: 3
            periodSeconds: 10
            terminationGracePeriodSeconds: 60
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 2000m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - mountPath: /backups
              name: backups
              readOnly: false
            - mountPath: /data
              name: data
              readOnly: false
            - mountPath: /import
              name: import
              readOnly: false
            - mountPath: /logs
              name: logs
              readOnly: false
            - mountPath: /metrics
              name: metrics
              readOnly: false
            - mountPath: /plugins
              name: plugins
              readOnly: false
      enableServiceLinks: false
      serviceAccountName: greenstar-neo4j
      volumes:
        - name: backups
          persistentVolumeClaim:
            claimName: greenstar-neo4j-backups
            readOnly: false
        - name: data
          persistentVolumeClaim:
            claimName: greenstar-neo4j-data
            readOnly: false
        - name: import
          persistentVolumeClaim:
            claimName: greenstar-neo4j-import
            readOnly: false
        - name: logs
          persistentVolumeClaim:
            claimName: greenstar-neo4j-logs
            readOnly: false
        - name: metrics
          persistentVolumeClaim:
            claimName: greenstar-neo4j-metrics
            readOnly: false
        - name: plugins
          persistentVolumeClaim:
            claimName: greenstar-neo4j-plugins
            readOnly: false
