deploy/base/public.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: public
  name: greenstar-public
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: public
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: public
    app.kubernetes.io/role: microservice
    greenstar.kfirs.com/oauth-client: "true"
  name: greenstar-public
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: public
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/component: public
    spec:
      containers:
        - image: ghcr.io/arikkfir/greenstar/backend/public
          name: public
          ports:
            - containerPort: 8000
              name: http
          resources:
            limits:
              cpu: 200m
              memory: 32Mi
            requests:
              cpu: 100m
              memory: 16Mi
      serviceAccountName: greenstar-public
