deploy/base/redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: redis
  name: greenstar-redis
spec:
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: redis
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: redis
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: redis
  name: greenstar-redis
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: redis
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: redis
    spec:
      containers:
        - image: redis/redis-stack:6.2.6-v0
          name: redis
          ports:
            - containerPort: 6379
              name: redis
            - containerPort: 8001
              name: http
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - mountPath: /data
              name: data
      serviceAccountName: greenstar-redis
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: greenstar-redis
