deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greenstar
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: greenstar-backend
                port:
                  name: http
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: greenstar-backend
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: greenstar-frontend
                port:
                  name: http
